# postech_ml_tech_challenge_fase_1

./: alembic.ini  dag.py  desenvolvimento_de_api_com_flask_parte_2.ipynb  pyproject.toml
api/: __init__.py
api/config/: config.py
api/models/: scrapper_data.py
api/routes/: auth.py  books.py  categories.py
docs/: README.md
migrations/: env.py
migrations/versions/: 129658ba67e3_criando_tabela_dos_acessos_do_usuario.py  299e49ae3fd3_trocando_nome_da_coluna_price_inc_tax_.py  519f55526cef_criando_tabela_do_scrapper_books.py  d30c5e11ae13_add_token_no_model_useraccess.py  e5b6a6a59488_tirando_title_como_unique.py
scripts/: import_data_sqlAlchemy.py
