[project]
name = "postech-ml-techchallenge-fase-1"
version = "0.1.0"
description = "Tech challenge fase 1 da pós graduação em machine learning engineering da FIAP"
authors = [
    {name = "jorgeplatero",email = "jorge.platero@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
